--- a/app/src/main/res/layout/activity_check_line.xml
+++ b/app/src/main/res/layout/activity_check_line.xml
@@ -58,16 +58,32 @@
             android:textSize="@dimen/big_text_size" />
     </LinearLayout>
 
-    <com.leon.detonator.Base.MyButton
-        android:id="@+id/btn_detect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:padding="0dp"
-        android:text="@string/button_start_detect"
-        android:textColor="@color/colorButtonEnabled"
-        android:textSize="@dimen/button_text_size"
-        button:bigButton="true"
-        button:keyCode="1" />
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.leon.detonator.Base.MyButton
+            android:id="@+id/btn_detect"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:padding="0dp"
+            android:text="@string/button_start_detect"
+            android:textColor="@color/colorButtonEnabled"
+            android:textSize="@dimen/button_text_size"
+            button:bigButton="true"
+            button:keyCode="1" />
+
+        <com.leon.detonator.Base.MyButton
+            android:id="@+id/btn_status"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:padding="0dp"
+            android:text="@string/button_get_status"
+            android:textColor="@color/colorButtonEnabled"
+            android:textSize="@dimen/button_text_size"
+            button:bigButton="true"
+            button:keyCode="2" />
+    </GridLayout>
 </LinearLayout>
