--- a/app/src/main/res/layout/activity_detect.xml
+++ b/app/src/main/res/layout/activity_detect.xml
@@ -145,8 +145,8 @@
         android:id="@+id/rl3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_above="@id/rl_set_delay">
+        android:layout_above="@id/rl_set_delay"
+        android:layout_marginBottom="15dp">
 
         <TextView
             android:id="@+id/txt_last_delay"
@@ -166,6 +166,7 @@
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/common_text_size" />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rl_set_delay"
         android:layout_width="match_parent"
@@ -189,8 +190,8 @@
             android:id="@+id/tv_row_delay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/tv_clickable"
             android:layout_toEndOf="@id/txt_delay1"
+            android:background="@drawable/tv_clickable"
             android:clickable="true"
             android:focusable="true"
             android:textColor="@android:color/holo_red_dark"
@@ -214,8 +215,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/tv_clickable"
             android:layout_marginEnd="10dp"
+            android:background="@drawable/tv_clickable"
             android:clickable="true"
             android:focusable="true"
             android:textColor="@android:color/holo_red_dark"
