--- a/app/src/main/res/layout/layout_action_bar.xml
+++ b/app/src/main/res/layout/layout_action_bar.xml
@@ -25,7 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:background="@drawable/btn_back_style" />
+        android:background="@drawable/btn_back_style"
+        android:contentDescription="@string/button_back" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -44,7 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="9dp"
-        android:text="@string/open_air"
+        android:text="@string/mode_open_air"
         android:textColor="@android:color/black"
         android:textSize="@dimen/status_bar_text_size"
         android:visibility="gone" />
@@ -56,7 +57,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="10dp"
-        android:text="@string/open_air"
+        android:text="@string/mode_open_air"
         android:textColor="@android:color/white"
         android:textSize="@dimen/status_bar_text_size"
         android:visibility="gone" />
