APK_1.3.16： 1.删除雷管后，其他雷管延期不改变 2.在线检测时如果列表出现负数会提示并不能继续 3.Log文件太大导致死机
APK_1.3.17：
1.所有操作加上日志
2.上传超时退出
3.网络不好死机问题
4.所有提示框字体变大

APK_1.4.0：
1.减小apk文件大小
2.修改电压电流读取方式为单指令
3.充电前和充电后都增加批量在线检测

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="190dp"
         android:layout_marginTop="170dp"
         android:autofillHints=""
-        android:hint="@string/hint_inputUsername"
+        android:hint="@string/hint_input_username"
         android:inputType="textPersonName"
         android:textColor="@color/colorLabelText"
         android:textColorHint="@color/colorHintText"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/et_username"
-        android:text="@string/txt_RegisterUser"
+        android:text="@string/txt_register_user"
         android:textColor="#1F9AD4"
         android:textSize="@dimen/common_text_size"
         android:visibility="gone" />
@@ -45,7 +45,7 @@
         android:layout_marginStart="190dp"
         android:layout_marginTop="10dp"
         android:autofillHints=""
-        android:hint="@string/hint_inputPassword"
+        android:hint="@string/hint_input_password"
         android:inputType="textPassword"
         android:textColor="@color/colorLabelText"
         android:textColorHint="@color/colorHintText"
