--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
 
     <style name="AlertDialog" parent="@android:style/Theme.Holo.Light.Dialog">
         <item name="android:textColor">@color/colorLabelText</item>
+        <item name="android:textSize">@dimen/message_text_size</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:gravity">center</item>
     </style>
