--- a/app/src/main/res/layout/activity_check_line.xml
+++ b/app/src/main/res/layout/activity_check_line.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ll1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
@@ -58,7 +58,18 @@
             android:textSize="@dimen/big_text_size" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="@string/text_unlock"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="@dimen/common_text_size" />
+
     <GridLayout
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -66,7 +77,6 @@
             android:id="@+id/btn_detect"
             android:layout_columnWeight="1"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
             android:padding="0dp"
             android:text="@string/button_start_detect"
             android:textColor="@color/colorButtonEnabled"
@@ -78,7 +88,6 @@
             android:id="@+id/btn_status"
             android:layout_columnWeight="1"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
             android:padding="0dp"
             android:text="@string/button_get_status"
             android:textColor="@color/colorButtonEnabled"
