--- a/app/src/main/res/layout/activity_select_mode.xml
+++ b/app/src/main/res/layout/activity_select_mode.xml
@@ -1,40 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
-    android:background="@color/colorCommonBackground"
-    android:columnCount="2"
-    android:orientation="horizontal"
-    android:rowCount="1">
+    android:background="@color/colorCommonBackground">
 
-    <RelativeLayout
-        android:id="@+id/rl_open_air"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:background="@color/colorOpenAirBackground">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:background="@color/colorCommonBackground"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:rowCount="1">
 
-        <ImageButton
-            android:id="@+id/ib_open_air"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@mipmap/open_air"
-            android:contentDescription="@string/mode_open_air" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_open_air"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:background="@color/colorOpenAirBackground">
 
-    <RelativeLayout
-        android:id="@+id/rl_tunnel"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:background="@color/colorTunnelBackground">
+            <ImageButton
+                android:id="@+id/ib_open_air"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@mipmap/open_air"
+                android:contentDescription="@string/mode_open_air" />
+        </RelativeLayout>
 
-        <ImageButton
-            android:id="@+id/ib_tunnel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@mipmap/tunnel"
-            android:contentDescription="@string/mode_tunnel" />
-    </RelativeLayout>
-</GridLayout>
+        <RelativeLayout
+            android:id="@+id/rl_tunnel"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:background="@color/colorTunnelBackground">
+
+            <ImageButton
+                android:id="@+id/ib_tunnel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@mipmap/tunnel"
+                android:contentDescription="@string/mode_tunnel" />
+        </RelativeLayout>
+    </GridLayout>
+
+    <CheckBox
+        android:id="@+id/cb_scheme"
+        style="@style/NormalCheckBoxTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:paddingStart="10dp"
+        android:text="@string/scheme_mode"
+        android:textColor="@color/text_black"
+        android:textSize="@dimen/common_text_size"
+        tools:ignore="RtlSymmetry" />
+</RelativeLayout>
