--- a/app/src/main/res/layout/activity_semi_product.xml
+++ b/app/src/main/res/layout/activity_semi_product.xml
@@ -97,12 +97,42 @@
         app:layout_constraintLeft_toLeftOf="@id/tv_current_text"
         app:layout_constraintTop_toBottomOf="@id/tv_code_text" />
 
+    <CheckBox
+        android:id="@+id/cb_write"
+        style="@style/NormalCheckBoxTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="30dp"
+        android:checked="true"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/text_write_sn"
+        android:textSize="@dimen/common_text_size"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_voltage" />
+
+    <CheckBox
+        android:id="@+id/cb_lock"
+        style="@style/NormalCheckBoxTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="80dp"
+        android:checked="true"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/text_lock_detonator"
+        android:textSize="@dimen/common_text_size"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_voltage" />
+
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="50dp"
-        android:columnCount="2"
+        android:layout_marginBottom="10dp"
+        android:columnCount="3"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -110,26 +140,42 @@
             android:id="@+id/btn_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_gravity="center"
             android:padding="0dp"
             android:text="@string/button_self_test"
             android:textColor="@color/colorButtonEnabled"
             android:textSize="@dimen/button_text_size"
-            button:bigButton="true"
+            button:bigButton="false"
             button:keyCode="1" />
 
         <com.leon.detonator.base.MyButton
             android:id="@+id/btn_scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_gravity="center"
             android:padding="0dp"
             android:text="@string/button_scan"
             android:textColor="@color/colorButtonEnabled"
             android:textSize="@dimen/button_text_size"
-            button:bigButton="true"
+            button:bigButton="false"
             button:keyCode="2" />
+
+        <com.leon.detonator.base.MyButton
+            android:id="@+id/btn_manual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            android:padding="0dp"
+            android:text="@string/button_manual"
+            android:textColor="@color/colorButtonEnabled"
+            android:textSize="@dimen/button_text_size"
+            button:bigButton="false"
+            button:keyCode="3" />
     </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
