--- a/app/src/main/res/layout/fragment_offline_list.xml
+++ b/app/src/main/res/layout/fragment_offline_list.xml
@@ -45,7 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="8dp"
-        android:columnCount="2"
+        android:columnCount="3"
         android:orientation="horizontal">
 
         <com.leon.detonator.base.MyButton
@@ -58,8 +58,21 @@
             android:text="@string/button_offline_download"
             android:textColor="@color/colorButtonEnabled"
             android:textSize="@dimen/button_text_size"
-            button:bigButton="true"
+            button:bigButton="false"
             button:keyCode="1" />
+
+        <com.leon.detonator.base.MyButton
+            android:id="@+id/btn_import"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            android:padding="0dp"
+            android:text="@string/button_restore_list"
+            android:textColor="@color/colorButtonEnabled"
+            android:textSize="@dimen/button_text_size"
+            button:bigButton="false"
+            button:keyCode="2" />
 
         <com.leon.detonator.base.MyButton
             android:id="@+id/btn_delete_selected"
@@ -71,7 +84,7 @@
             android:text="@string/button_delete_selected"
             android:textColor="@color/colorButtonEnabled"
             android:textSize="@dimen/button_text_size"
-            button:bigButton="true"
-            button:keyCode="2" />
+            button:bigButton="false"
+            button:keyCode="3" />
     </GridLayout>
 </RelativeLayout>
